--- a/style.css
+++ b/style.css
@@ -5,47 +5,42 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+.header {
+    background-color: #1d2126;
+}
 .container {
-    width: 1200px;
-    margin: 0 auto;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
-}
-.col-md-3 {
-    width: 25%;
-}
-.col-md-6 {
-    width: 50%;
-}
-.header {
-    background-color: black;
-    height: 80px;
-    padding: 25px 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 .row {
     display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+[class*="col-"] {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.header-row {
+    height: 80px;
+    background-color: #1d2126;
+    align-items: center;
 }
 .menu {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: nowrap;
+    overflow: auto;
 }
-.menu a {
-    text-decoration: none;
-    color: rgba(164, 174, 173, 0.68);
+.item {
+    color: rgba(255, 255, 255, 0.75);
+    padding: 8px;
     font-size: 14px;
-}
-.menu a:hover {
-    border: solid 2px rgba(164, 174, 173, 0.68) ;
-    padding: 8px 10px;
-    border-radius: 10%;
-}
-#home {
-    color: #39a492;
-    border: solid 2px #39a492;
-    padding: 8px 10px;
-    border-radius: 10%;
-}
-.input-search .btn-search {
-    display: flex;
-    justify-content: space-between;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 5px;
+    border: solid rgba(255, 255, 255, 0) 1px transparent;
 }
