--- a/style.css
+++ b/style.css
@@ -40,16 +40,21 @@ body {
 .menu {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: space-evenly;
     overflow: auto;
 }
 .item {
-    color: rgba(255, 255, 255, 0.75);
     padding: 8px;
     font-size: 14px;
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
     border-radius: 5px;
     border: solid 1px transparent;
+}
+
+a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.75);
 }
 .item:hover {
     border-radius: 5px;
@@ -67,6 +72,7 @@ body {
     background-color: transparent;
     border: solid rgba(255, 255, 255, 0.75) 1px;
     border-radius: 4px;
+    color: white;
 }
 .input-search::placeholder {
     color: rgba(255, 255, 255, 0.75);
