--- a/style.css
+++ b/style.css
@@ -359,16 +359,11 @@ a {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
 }
-.contact-info {
-    margin-bottom: 80px;
-}
-.contact-row {
-    position: relative;
-}
+
+
 .contact-form {
-    position: absolute;
     bottom: 70px;
-    width: 555px;
+    width: 100%;
     height: 400px;
     background-color: rgba(255, 255, 255, 1);
     padding: 25px 29px;
@@ -390,7 +385,7 @@ a {
     text-transform: uppercase;
 }
 .contact-form input {
-    width: 240px;
+    width: 100%;
     height: 44px;
     border-radius: 3px;
     background-color: rgba(234, 238, 241, 1);
@@ -398,7 +393,7 @@ a {
     margin-right: 5px;
 }
 .contact-form textarea {
-    width: 485px;
+    width: 100%;
     height: 155px;
     border-radius: 3px;
     background-color: rgba(234, 238, 241, 1);
@@ -415,7 +410,8 @@ a {
     font-family: 'Quattrocento Sans', sans-serif;
     font-size: 14px;
     font-weight: bold;
-    margin-top: 60px;
+    margin-left: 15px;
+    margin-top: 50px;
     margin-bottom: 60px;
     background-color: #39a493;
     border-color: #39a493;
@@ -433,6 +429,7 @@ a {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     color: white;
+    line-height: 20px;
 }
 .footer-social {
     display: flex;
